# Parallax

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  TESTING.md  app.py  pyproject.toml  requirements.txt  traffic_generator.py
.github/workflows/: ci.yml
detection/: __init__.py  __main__.py  base.py  baselines.py  cli.py  engine.py  models.py  pipeline.py  utils.py
detection/tier1/: __init__.py  t1_001_volume_anomaly.py  t1_002_automation_signature.py  t1_003_token_ratio.py  t1_004_session_anomaly.py  t1_005_model_targeting.py  t1_006_context_exploitation.py  t1_007_error_pattern.py  t1_008_concurrent_sessions.py
detection/tier2/: __init__.py  t2_001_distribution_divergence.py  t2_002_entropy_analysis.py  t2_003_cross_account_correlation.py  t2_004_power_law_deviation.py  t2_005_temporal_clustering.py  t2_006_behavioral_shift.py
examples/: basic_usage.py  custom_detector.py
parallax/: __init__.py  cli.py  models.py
parallax/core/: __init__.py  constants.py
parallax/detectors/: __init__.py  base.py
parallax/ingestion/: __init__.py  pipeline.py
parallax/simulation/: __init__.py  generator.py
sigma/tier0/: bulk_registration.yml
sigma/tier1/: automation_signature.yml
templates/: dashboard.html
tests/: conftest.py  test_integration.py  test_models.py  test_pipeline.py
tests/adversarial/: test_adversarial_evasion.py  test_blended_behavior.py  test_low_and_slow.py  test_threshold_sensitivity.py
tests/test_detectors/: test_automation_signature.py  test_bulk_registration.py  test_volume_anomaly.py
tests/test_ingestion/: test_pipeline.py
tests/test_simulation/: test_generator.py
tests/tier1/: test_t1_001_volume_anomaly.py  test_t1_002_automation_signature.py  test_t1_003_token_ratio.py  test_t1_004_session_anomaly.py  test_t1_005_model_targeting.py  test_t1_006_context_exploitation.py  test_t1_007_error_pattern.py  test_t1_008_concurrent_sessions.py
(+14 files in other folders)
